--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.9",
     "dayjs": "^1.11.13",
     "lodash-es": "^4.17.21",
+    "lucide-vue-next": "^0.476.0",
     "pinia": "^3.0.1",
     "pinia-plugin-persistedstate": "^4.2.0",
     "vant": "^4.9.17",
@@ -20,8 +21,7 @@
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
-    "@tailwindcss/nesting": "^0.0.0-insiders.565cd3e",
-    "@tailwindcss/postcss": "^4.0.8",
+    "@iconify/vue": "^4.3.0",
     "@types/node": "^22.13.5",
     "@typescript-eslint/eslint-plugin": "^8.25.0",
     "@typescript-eslint/parser": "^8.25.0",
@@ -32,11 +32,11 @@
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-vue": "^9.32.0",
-    "postcss": "^8.5.3",
+    "postcss": "^8.4.31",
     "postcss-import": "^16.1.0",
     "postcss-pxtorem": "^6.1.0",
     "prettier": "^3.5.2",
-    "tailwindcss": "^4.0.8",
+    "tailwindcss": "^3.4.1",
     "typescript": "~5.7.2",
     "unplugin-vue-components": "^28.4.0",
     "vite": "^6.2.0",
