--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "amfe-flexible": "^2.2.1",
     "axios": "^1.7.9",
     "dayjs": "^1.11.13",
+    "js-cookie": "^3.0.5",
     "lodash-es": "^4.17.21",
     "lucide-vue-next": "^0.476.0",
     "pinia": "^3.0.1",
@@ -22,6 +23,7 @@
   },
   "devDependencies": {
     "@iconify/vue": "^4.3.0",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^22.13.5",
     "@typescript-eslint/eslint-plugin": "^8.25.0",
     "@typescript-eslint/parser": "^8.25.0",
