--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lucide-vue-next": "^0.476.0",
     "pinia": "^3.0.1",
     "pinia-plugin-persistedstate": "^4.2.0",
+    "rollup-plugin-visualizer": "^5.14.0",
     "vant": "^4.9.17",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
