--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "amfe-flexible": "^2.2.1",
     "axios": "^1.7.9",
+    "crypto-js": "^4.2.0",
     "dayjs": "^1.11.13",
     "js-cookie": "^3.0.5",
     "lodash-es": "^4.17.21",
